# sudoku_solver_rust

./: Cargo.toml
samples/: example_3.txt  example_4.txt  solution_example_4.txt
src/: core.rs  example_1.txt  example_2.txt  example_3.txt  example_5.txt  file.txt  initialize_empty_cells.rs  initialize_grid.rs  lib.rs  main.rs  model.rs  solver.rs  solver_helper.rs  utilities.rs  validator.rs
src/core/: hidden_tuplets_strategies.rs  initialize_empty_cells.rs  initialize_grid.rs  model.rs  naked_tuplets_stategies.rs  simple_coloring.rs  solver.rs  solver_helper.rs  utilities.rs  validator.rs  x_wing_strategy.rs
src/template/: good_output.html  grid_template.hbs  init_sudoku.html  mystyle.css  template.rs
