[package]
name = "sudoku_solver"
version = "0.1.0"
authors = ["Your Name <semboloni@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = "0.14.0"
env_logger = "0.7.1"
log = "0.4.11"
itertools = "0.9.0"
handlebars = "3.5.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"